@@ -1,6 +1,8 @@
 
 brk segment overflow in thread #1: can't grow to 0x........
+(see section Limitations in user manual)
 brk segment overflow in thread #1: can't grow to 0x........
+(see section Limitations in user manual)
 
 HEAP SUMMARY:
     in use at exit: ... bytes in ... blocks
